# CHSZLabLib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES  build.sh  demo.py  pyproject.toml  report.md  summary.md
.github/workflows/: build-wheels.yml  publish-pypi.yml
benchmarks/: compare_cli_python.py  results.json  run_benchmark.py
bindings/: bmatching_binding.cpp  chils_binding.cpp  clustre_binding.cpp  dyn_delta_approx_binding.cpp  dyn_matching_binding.cpp  dyn_orientation_binding.cpp  dyn_wmis_binding.cpp  freight_binding.cpp  heicut_binding.cpp  heiorient_binding.cpp  heistream_binding.cpp  hypermis_binding.cpp  io_binding.cpp  kahip_binding.cpp  kahipe_binding.cpp  kalp_binding.cpp  kamis_binding.cpp  kamis_mmwis_binding.cpp  kamis_wmis_binding.cpp  learnandreduce_binding.cpp  maxcut_binding.cpp  motif_binding.cpp  red2pack_binding.cpp  scc_binding.cpp  scc_evo_binding.cpp  sharedmap_binding.cpp  sort_adjacency.h  streaming_bmatching_binding.cpp  vieclus_binding.cpp  viecut_binding.cpp
bindings/dyn_delta_approx_stubs/absl/strings/: string_view.h
bindings/dyn_delta_approx_stubs/app/algorithms/: dyn_algorithm_impl.h
chszlablib/: __init__.py  _gurobi_hypermincut_ilp.py  _gurobi_ilp.py  bmatching.py  cluster.py  correlation_clustering.py  decomposition.py  dynamic.py  exceptions.py  graph.py  heistream.py  hypergraph.py  independence.py  io.py  longest_path.py  maxcut.py  mincut.py  mis.py  motif_clustering.py  mwis.py  orientation.py  partition.py  paths.py
cmake/: compat_gnu_cxx.h
cmake/parallel/: numeric
docs/: concurrent-mwis.md  correlation-clustering.md  dynamic-edge-orientation.md  dynamic-matching.md  dynamic-weighted-mis.md  edge-orientation.md  evolutionary-partitioning.md  graph-clustering.md  graph-partitioning.md  hypergraph-b-matching.md  hypergraph-independent-set.md  hypergraph-minimum-cut.md  learn-and-reduce.md  local-motif-clustering.md  maximum-cut.md  maximum-independent-set.md  minimum-cut.md  process-mapping.md  streaming-clustering.md  streaming-hypergraph-partitioning.md  streaming-partitioning.md  two-packing.md
docs/plans/: 2026-02-23-python-interface-design.md  2026-02-23-python-interface-plan.md  2026-02-25-heicut-integration-design.md  2026-02-25-heicut-integration-plan.md  2026-02-25-hypergraph-hypermis-design.md  2026-02-25-hypergraph-hypermis-plan.md
examples/: bmatching.py  chils.py  cluster.py  correlation_clustering.py  demo.py  dyn_approx_orientation.py  dyn_matching.py  dyn_orientation.py  dyn_wmis.py  evolutionary_correlation_clustering.py  evolutionary_partition.py  freight_streaming.py  hypergraph_mincut.py  hypermis.py  kamis_branch_reduce.py  learn_and_reduce.py  maxcut.py  mincut.py  mmwis.py  motif_cluster.py  node_ordering.py  node_separator.py  online_mis.py  orient_edges.py  partition.py  process_mapping.py  redumis.py  stream_cluster.py  stream_hypergraph_partition.py  stream_partition.py  streaming_bmatching.py  two_packing.py
experiments/scripts/: bench_python.py
img/: gen_social_preview.py
scripts/: build_mtkahypar.sh  build_sharedmap_mtkahypar.sh  patch_heihgm.py
shims/bmatching_absl/absl/container/: flat_hash_map.h
shims/fpt_maxcut/experimental/: filesystem
shims/gurobi/: gurobi_c++.h
shims/heiOrient_absl/absl/strings/: string_view.h
shims/scc_mpi/: mpi.h
shims/sharedmap/: mtkahypar.h  mtkahypartypes.h
tests/: conftest.py  test_bmatching.py  test_cluster.py  test_correlation_clustering.py  test_freight.py  test_graph.py  test_graph_conversions.py  test_heistream.py  test_hypergraph.py  test_hypermincut.py  test_hypermis.py  test_integration.py  test_io.py  test_kaffpae.py  test_learnandreduce.py  test_longest_path.py  test_maxcut.py  test_mincut.py  test_mis.py  test_motif_clustering.py  test_mwis.py  test_orientation.py  test_partition.py  test_sharedmap.py
